--- a/mail.html
+++ b/mail.html
@@ -6,6 +6,7 @@
 </head>
 
 <body style="max-width:600px; margin:auto; line-height:1.5; font-size:14px;">
+test
 <div>test</div>
 
 <div role="banner" style="background-image:url(img/fon1.jpg); background-color:white;">
